# pycon-schemas

./: .editorconfig  .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.md  setup.cfg
pycon_schemas/: __init__.py  conftest.py  reader.py  talk.py  validator.py  version.py
pycon_schemas/schemas/: participant.json  participant_contact.json  presentation.json  proposal.json  speaker.json  sponsor.json  sponsor_contact.json  sponsor_list.json  sponsorship.json  sponsorships.json  submission.json  talk.json
pycon_schemas/tests/: test_participant.py  test_participant_contact.py  test_presentation.py  test_proposal.py  test_speaker.py  test_sponsor.py  test_sponsor_contact.py  test_sponsor_list.py  test_sponsorship.py  test_sponsorships.py  test_submission.py  test_talk.py
pycon_schemas/tests/examples/: participant.json  participant_contact.json  presentation.json  proposal.json  sponsor.json  sponsor_list.json  sponsorship.json  sponsorships.json
schemas/: speaker.json  talk.json
