[metadata]
name = pycon-schemas
version = attr: pycon_schemas.version.__version__
description = A collection of jsonschema entityes for PyCons
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/PythonSanSebastian/pycon-schemas
    Bug Tracker = https://github.com/PythonSanSebastian/pycon-schemas/issues
    Changelog = https://github.com/PythonSanSebastian/pycon-schemas/blob/master/CHANGELOG.md
author = Alexandre Savio
author_email = alexsavio@gmail.com
license = MIT License
license-file = LICENSE
keywords =
    pycon
    jsonschema
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
test_suite = tests
setup_requires =
    wheel
    setuptools
    pytest-runner
install_requires =
tests_require =
    pytest
    jsonschema==3.1.1

[pydocstyle]
inherit = false
match = (?!test_).*\.py
ignore-decorators = property

[flake8]
max-line-length = 120
max-complexity = 10
select = C,E,F,W,B,B950
ignore = E501,E126

[isort]
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True
force_single_line = False
indent = 4
line_length = 120
wrap_length = 60
not_skip = __init__.py
length_sort = True
known_first_party = pycon_schemas
known_third_party = pytest,jsonschema
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.7
ignore_missing_imports = True
warn_unused_configs = True

[tox:tox]
envlist =
    lint,
    doclint,
    isort,
    mypy,
    tests
skipsdist = True

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True

[coverage:report]
include =
    pycon_schemas/*
omit =
    */tests/*

[testenv]
basepython = python3
whitelist_externals = make
deps =
    lint: flake8
    lint: flake8-bugbear
    isort: isort
    mypy: mypy
    doclint: pydocstyle
passenv =
    CI = 1
setenv =
    PYTHONPATH = {toxinidir}:{toxinidir}
    TESTING = True
commands =
    lint: flake8 pycon_schemas
    isort: isort -c -rc pycon_schemas
    mypy: mypy pycon_schemas
    doclint: pydocstyle -v pycon_schemas

[testenv:tests]
deps =
    coverage
commands =
    python setup.py develop
    coverage run -m pytest
    coverage report

[testenv:docs]
deps = -rdocs/requirements.txt
changedir = {toxinidir}/docs
commands =
    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
